# portaudiopp

./: .clang-format  README.md  clang-tidy
build-portaudio-Imported_Kit_temporary-RelWithDebInfo/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-portaudio-Imported_Kit_temporary-RelWithDebInfo/cmake/portaudio/: portaudioTargets.cmake
portaudio/: CMakeCache.txt  README.md  cmake_install.cmake  cmake_uninstall.cmake
portaudio/build.old/: cmake_uninstall.cmake  install_manifest.txt
portaudio/cmake/portaudio/: portaudioTargets.cmake
portaudio/examples/: pa_devs.c
portaudio/msvc_build/: CMakeCache.txt  cmake_install.cmake  compile_commands.json
portaudio/msvc_build/cmake/portaudio/: portaudioTargets.cmake
portaudio/msvc_build/devs/: devs.vcxproj  devs.vcxproj.filters
portaudio/msvc_build/msvc/: UpgradeLog.htm  portaudio.def  portaudio.sln  portaudio.vcxproj  portaudio.vcxproj.filters
portaudio/portaudio/: portaudio.pro  portaudio_global.h  portaudioqt.cpp  portaudioqt.h
portaudiopp/include/: portaudioplusplus.hpp
portaudiopp/tdd/: CMakeLists.txt  main  main.cpp  output.txt  portaudioapp.code-workspace  portaudioplusplus.h
portaudiopp/usingqt/build-qtportaudiopp-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  moc_dialog.cpp  qtportaudiopp  ui_dialog.h
portaudiopp/usingqt/build-qtportaudiopp-Desktop_Qt_5_15_2_GCC_64bit-Release/: Makefile  qtportaudiopp  ui_dialog.h
portaudiopp/usingqt/build-qtportaudiopp-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h
portaudiopp/usingqt/build-qtportaudiopp-Desktop_Qt_5_15_2_clang_64bit-Debug/: .qmake.stash  Makefile  moc_dialog.cpp  moc_predefs.h  ui_dialog.h
portaudiopp/usingqt/build-qtportaudiopp-clang10-Debug/: .qmake.stash  Makefile  moc_dialog.cpp  moc_predefs.h  qtportaudiopp  ui_dialog.h
portaudiopp/usingqt/qtportaudiopp/: dialog.cpp  dialog.h  dialog.ui  main.cpp  qtportaudiopp.pro
(+51 files in other folders)
